:test_tube: TEST: 특정 계약의 모든 정보를 확인하는 메서드 showAllContractInfo 테스트 코드 작성